k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hms-production
  labels:
    name: hms-production
    env: production
    security.istio.io/tlsMode: istio
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: "node-type=production"
---
apiVersion: networking.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: hms-production
spec:
  mtls:
    mode: STRICT
